--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,22 @@
 .test {
-    background-color: rgba(156, 156, 243, 0.411);
     color: black;
     text-align: center;
     height: 2000px;
+}
+
+#header {
+    background-color: crimson;
+}
+
+#nav {
+    background-color: rgb(133, 133, 172);
+    padding-bottom: 10px;
+}
+
+.mainContent {
+    background-color: red;
+    float: none;
+    padding-right: 15%;
+    padding-left: 15%;
+    text-align: center;
 }
